resources/public/style.css
/* ... */
#grid {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    width: 110vw;
    height: 110vh;
    pointer-events: none;
    background-image: linear-gradient(to right, #aaa 1px, transparent 1px), linear-gradient(to bottom, #aaa 1px, transparent 1px);
}

.settingToggles > label {
    display: block;
}

/*//////////////////////////*\
| Button Bar
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/
.ButtonBar {
    display: flex !important;
}
.ButtonBar.inline {
    display: flex !important;
}
.ButtonBar > button {
    flex: 1 0 auto;
    padding: 5px;
    margin: 0;
    border-width: 1px;
    border-radius: 0;
}
.ButtonBar > button:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
.ButtonBar > button:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

/*//////////////////////////*\
| Panels
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

header {
    display: flex;
    height: 2.5rem;
    line-height: 2.5rem;
    border-bottom: 1px solid #000;
    padding: 0 1rem;
    background-image: linear-gradient(to bottom, #ccc, #bbb);
    user-select: none;
    z-index: 18;
}

header.transparent {
    background-image: none;
    background-color: #fff0;
    border: 0;
}

header .fas {
    font-size: 2rem;
    margin-top: .1rem;
    cursor: pointer;
}

header.slim {
    height: 1.75rem;
    line-height: 1.75rem;
}

header.no-border {
    border: none !important;
}

header >.left, header >.right, header >.mid {
    z-index: 18;
}

header >.left, header >.right {
    flex: 0 1 auto;
}

header >.left {
    margin-left: initial;
    margin-right: auto;
}

header >.right {
    margin-left:auto;
    margin-right: initial;
}

header >.mid {
    flex: 0 1 auto;
}

header h1, header h2, header h3, header h4, header h5, header h6 {
    margin: 0;
    padding: 0;
}

.fas.fa-is-left {
    margin-right: .25rem;
}

.fas.fa-is-right {
    margin-left: .25rem;
}

.fa-1x {
    font-size: 1rem !important;
}

.fa-1_5x {
    font-size: 1.5rem !important;
}

.text-blue {
    color: #00a;
}

.text-green {
    color: #0a0;
}

.text-red {
    color: #a00;
}

.text-muted {
    color: #8c8c8c;
}

aside.panel {
    position: fixed;
    top: 0;
    max-width: 50%;
    min-width: 30%;
    width: 30%;
    height: 100%;
    max-height: 100%;
    min-height: 100%;
    box-shadow: 0 0 10px 5px #0009;
    background-color: #dfdfdf;
    z-index: 21;
    cursor: initial !important;
}

.panel.half-width {
    width: 50% !important;
}

.panel header {
    border-bottom: 1px solid #000;
}

.panel.left {
    right: initial;
    transition: left ease-in-out .25s;
    left: -55%;
}

.panel.left.open, .panel.left[data-state=open] {
    left: 0;
}

.panel.right {
    left: initial;
    transition: right ease-in-out .25s;
    right: -55%;
}

.panel.right.open, .panel.right[data-state=open] {
    right: 0;
}

.panel-body {
    padding: 0 .5rem;
    overflow: auto;
    position: absolute;
    top: 2.65rem;
    bottom: 0;
    word-wrap: break-word;
    width: 100%;
}

.panel-trigger {
    color: #000;
    /* AAAAAAAAAAAAAAAAAAAAAAAAAAA */
    text-shadow: 1px 1px 0 #AAA, -1px 1px 0 #AAA, 1px -1px 0 #AAA, -1px -1px 0 #AAA, 0px 1px 0 #AAA, 0px -1px 0 #AAA, -1px 0px 0 #AAA, 1px 0px 0 #AAA;
    display: inline-block;
    cursor: pointer;
}

.panel-trigger:hover {
    color: #333;
}

.panel-trigger:active {
    color: #555;
}

.panel-trigger .fas, .panel-trigger .far, .panel-trigger .fal {
    font-size: 2.5rem;
}

article .body {
    padding: .5rem;
}

.panel-body article:not(:last-of-type) {
    margin-bottom: 1rem;
}
.panel-body article:first-of-type {
    margin-top: .5rem;
}
.panel-body article:last-of-type {
    margin-bottom: .5rem;
}

.panel-body article {
    border: 1px solid #000;
    background-color: #0002;
}

.panel-body article p {
    padding: 0;
    margin: .5rem 0;
}

.panel-body article h2 {
    margin: 0;
    padding: 0;
    text-align: center;
    width:  100%;
}

.panel-body article hr {
    height: 1px;
    border: none;
    margin: 0;
    background-image: linear-gradient(to right, #000, #888, #000);
}

.panel-body article .padme-daddy {
    padding: .5rem;
}

.panel-body article a {
    display: block;
}

.no-p-margin p {
    margin: 0 !important;
}

body.panel-right-open .ui-bar {
    left: 0;
    width: 70%;
    transition: width ease-out .25s;
}

body.panel-left-open .ui-bar {
    right: 0;
    width: 70%;
    transition: width ease-out .25s;
}

/* CHAT */

.chat-wrapper {
    display: flex;
    flex-flow: column;
    height: 99%;
}

.chat-wrapper ul.chat-body {
    flex: 1;
    overflow: auto;
    margin: 0;
    padding: 0;
    list-style: none;
    overflow-x: hidden;
}

ul.chat-body li.chat-line {
    /*border:1px solid #000;*/
    line-height: 1.5rem;
    border-bottom: 1px solid #bfbfbf;
}

ul.chat-body li.chat-line:nth-child(odd) {
    background: #d5d5d5;
}

ul.chat-body li.chat-line:not(:last-child):not(:only-of-type) {
    padding: 5px 0;
}

ul.chat-body li.chat-line:nth-child(odd) {
    /*background-image: linear-gradient(to bottom, #0000, #0005, #0000);*/
}

li.chat-line span[title]:not(.text-badge), li.chat-line i[title] {
    border-bottom: 1px dashed #aaa;
    cursor: default;
}

li.chat-line .text-badge, header .text-badge {
    line-height: 1rem;
    background-color: #ccc;
    padding: .15rem .5rem;
    border-radius: 1rem;
    color: #770;
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

header .text-badge {
    background-color: #eee;
}

header .icon-badge {
    font-size:1rem;
}

header .icon-badge:only-of-type, header.text-badge:only-of-type, header .icon-badge:only-child, header .text-badge:only-child {
    margin-left: .15rem;
}

header .icon-badge[title] {
    border-bottom: 1px dashed #444;
    padding-bottom: 1px;
}

li.chat-line.server-action {
    text-align: center;
    font-weight: bold;
    color: #555;
    cursor: default;
}
/* ... */

